--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "@govuk-prototype-kit/common-templates": "2.0.1",
     "govuk-frontend": "5.14.0",
-    "govuk-prototype-kit": "13.18.1"
+    "govuk-prototype-kit": "13.18.1",
+    "lodash": "^4.17.23",
+    "qs": "^6.14.1"
   },
   "overrides": {
     "lodash": "4.17.23",
